--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,23 @@ env:
 #       - g++-6
 
 before_install:
+  - export MINICONDA=$HOME/miniconda
+  - export PATH="$MINICONDA/bin:$PATH"
+  - hash -r
+  # Install conda only if necessary
+  - command -v conda >/dev/null || { wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+     bash miniconda.sh -b -f -p $MINICONDA; }
+  - conda update --yes conda
+  - conda remove --yes -n condaenv --all
+  - conda create --yes -n condaenv python=2.7
+  - conda install --yes -n condaenv pip
+  - source activate condaenv
+  # The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
+  - sudo rm -rf /dev/shm
+  - sudo ln -s /run/shm /dev/shm
+  - conda install --yes -c obspy python=2.7
+  - travis_retry pip install $PIP_DEPS
+   #Install Gfortran in selected version
   - sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
   - sudo -E apt-get -yq update &>> ~/apt-get-update.log
   - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install 
@@ -43,8 +60,10 @@ before_install:
   - ./TRAVIS/install_netcdf.sh $TRAVIS_ROOT $GFORTRAN_VERSION
 
 install:
-  - gfortran-$GFORTRAN_VERSION -v
-  - gfortran-$GFORTRAN_VERSION hello_world.f90 -o hello_world.x
+  #- gfortran-$GFORTRAN_VERSION -v
+  #- gfortran-$GFORTRAN_VERSION hello_world.f90 -o hello_world.x
+  - cd TESTING
+    python2.7 test_nightly_axisem.py -t 1
 
 script:
   - ./hello_world.x
