adapt to Travis environment
 - a million small changes to fix paths, dependencies and everything
 - reduce output (especially of PyAxi)
 - some updates on PyAxi for compatibility with recent ObsPy (still
   messy, though)

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,12 +48,13 @@ before_install:
    #Install Gfortran in selected version
   - sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
   - sudo -E apt-get -yq update &>> ~/apt-get-update.log
+  - sudo -E apt-get -yq --force-yes install tcsh gnuplot
   - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install 
     gfortran-$GFORTRAN_VERSION g++-$GFORTRAN_VERSION
   - export TRAVIS_ROOT=$HOME/travis
   - mkdir -p $TRAVIS_ROOT
   # Get and install OpenMPI
-  - ./TRAVIS/install_mpi.sh $TRAVIS_ROOT $MPI_IMPL $GFORTRAN_VERSION > LOG_OpenMPI.log
+  - ./TRAVIS/install_mpi.sh $TRAVIS_ROOT $MPI_IMPL $GFORTRAN_VERSION #> LOG_OpenMPI.log
   # Get and install FFTW3
   - ./TRAVIS/install_fftw.sh $TRAVIS_ROOT $GFORTRAN_VERSION > LOG_FFTW.log
   # Get and install NetCDF4
