--- a/TESTING/nightly/test_03/inpython.cfg
+++ b/TESTING/nightly/test_03/inpython.cfg
@@ -50,7 +50,7 @@
 AXISEM_DIR = ..                          ; Address of AXISEM root directory
 SOLVER_NAME = TEST03_SOLVER              ; Solver directory name
 # Choose Mesh (local subdirname in SOLVER/MESHES directory) in MESHER_BASIC
-VERBOSE = Y                              ; For debugging purposes
+VERBOSE = N                              ; For debugging purposes
 
 #### REQUIRED STEPS FOR RUNNING AXISEM ####
 # 'NEW_MESH' flag controls all the required steps for a simulation: 
@@ -291,7 +291,7 @@ FMAX = 0.1                               ; Maximum frequency
 #******************************************************************
 [MAKE_AXISEM]
 # Set name of mpirun command
-MPIRUN  = mpirun
+MPIRUN  = /home/travis/travis/bin/mpirun
 
 # Enable NetCDF
 USE_NETCDF = false
@@ -305,7 +305,7 @@ INCLUDE_MPI = true
 
 # GFORTRAN (fast)
 CC      = gcc                                # C compiler
-FC      = mpif90                             # Fortran compiler
+FC      = $(TRAVIS_ROOT)/bin/mpif90          # Fortran compiler
 FFLAGS  = -O3 -march=native $(EXTRAFLAGS)
 CFLAGS  = -O3 -march=native $(EXTRAFLAGS)
 LDFLAGS = -O3 -march=native $(EXTRAFLAGS)
