Remove some more unnecessary parts of Travis build
 - Decrease verbosity of HDF5 and NetCDF4 builds
 - slim down OpenMPI build
 - Do not install FFTW

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,20 +37,17 @@ before_install:
   # The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
   - sudo rm -rf /dev/shm
   - sudo ln -s /run/shm /dev/shm
-  - conda install --yes -c obspy obspy python=2.7
+  - conda install --yes -c obspy obspy # python=2.7
   - travis_retry pip install $PIP_DEPS
    #Install Gfortran in selected version
   - sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
   - sudo -E apt-get -yq update &>> ~/apt-get-update.log
-  - sudo -E apt-get -yq --force-yes install tcsh gnuplot
   - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install 
-    gfortran-$GFORTRAN_VERSION g++-$GFORTRAN_VERSION
+    gfortran-$GFORTRAN_VERSION g++-$GFORTRAN_VERSION tcsh gnuplot
   - export TRAVIS_ROOT=$HOME/travis
   - mkdir -p $TRAVIS_ROOT
   # Get and install OpenMPI
   - ./TRAVIS/install_mpi.sh $TRAVIS_ROOT $MPI_IMPL $GFORTRAN_VERSION > LOG_OpenMPI.log
-  # Get and install FFTW3
-  - ./TRAVIS/install_fftw.sh $TRAVIS_ROOT $GFORTRAN_VERSION > LOG_FFTW.log
   # Get and install NetCDF4
   - ./TRAVIS/install_netcdf.sh $TRAVIS_ROOT $GFORTRAN_VERSION > LOG_NetCDF4.log
   - export PATH="$TRAVIS_ROOT/bin:$PATH"
